--- a/media/css/main.css
+++ b/media/css/main.css
@@ -42,12 +42,12 @@ html[lang=he] body {
 }
 
 a:link, a:visited, a:active {
-    color: #447bc4;
+    color: rgb(0, 81, 185);
     text-decoration: none;
 }
 
 a:visited {
-    color: #39508c;
+    color: rgb(66,22,88);
 }
 
 a:hover {
@@ -55,7 +55,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #303030;
+    color: rgb(40,40,40);
     font-weight: normal;
 }
 
@@ -76,6 +76,10 @@ header.global {
     text-align: start;
     width: 980px;
     z-index: 2;
+}
+
+header.global a:visited {
+    color: rgb(0, 81, 185);
 }
 
 #global-header-tab a {
@@ -127,7 +131,8 @@ h1.site-title {
     text-align: right;
 }
 
-h1.site-title a {
+h1.site-title a,
+h1.site-title a:visited {
     color: #333333;
 }
 
@@ -585,7 +590,6 @@ ul.user-messages li.error {
 }
 
 .breadcrumbs a {
-    color: #0489b7;
     font-weight: bold;
     text-decoration: none;
 }
@@ -595,6 +599,9 @@ ul.user-messages li.error {
     text-decoration: underline;
 }
 
+.breadcrumbs a:visited {
+    color: rgb(0, 81, 185);
+}
 
 /*----------------------------------
     Content
@@ -786,6 +793,10 @@ div.support-search button.img-submit {
     padding: 3px 0;
 }
 
+#side a:visited {
+    color: rgb(0, 81, 185);
+}
+
 #quick-links {
     font-size: 13px;
     margin: 25px 0 0 20px;
@@ -917,7 +928,7 @@ div.support-search button.img-submit {
 }
 
 .sd-module p {
-    color: #666;
+    color: rgb(40, 40, 40);
     margin: 10px 0;
 }
 
@@ -946,7 +957,7 @@ div.support-search button.img-submit {
 
 /* Side tabs -- TODO: rename doc-tabs to something more generic */
 #doc-tabs {
-    color: #666;
+    color: rgb(40, 40, 40);
     font-size: 13px;
     margin: 16px 0 0;
 }
@@ -1035,7 +1046,7 @@ div.support-search button.img-submit {
 #doc-tabs li.active span,
 #doc-tabs li.active a {
     border-left: solid 2px #fff;
-    color: #666;
+    color: rgb(40, 40, 40);
     left: -2px;
     padding-left: 52px;
     position: relative;
@@ -1144,7 +1155,7 @@ ol.pagination li.prev a {
 }
 
 ol.pagination li.selected a {
-    background: #447bc4;
+    background: rgb(0, 81, 185);
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -1544,7 +1555,7 @@ section.marky div.submit button {
 
 #media-modal div.type ol li {
     border-left: 2px solid #929292;
-    color: #447BC4;
+    color: rgb(0, 81, 185);
     cursor: pointer;
     float: left;
     font-weight: bold;
@@ -1738,7 +1749,7 @@ input[type="submit"].link-btn {
     box-shadow: none;
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
-    color: #447bc4;
+    color: rgb(0, 81, 185);
     cursor: pointer;
     font-weight: normal;
     padding: 0;
