--- a/media/css/wiki_syntax.css
+++ b/media/css/wiki_syntax.css
@@ -1,6 +1,6 @@
 /* Wiki Document content */
 #doc-content {
-    color: #666;
+    color: rgb(40, 40, 40);
     font-size: 14px;
     line-height: 1.5em;
 }
